<resources>
    <string name="app_name">The Dish</string>
    <string name="posts">Posts</string>
    <string name="users">Staff</string>
    <string name="name">Name:</string>
    <string name="favorite_food">Favorite food</string>
    <string name="favorite_restaurant">Favorite Restaurant</string>
    <string name="favorite_drink">Favorite Drink</string>
    <string name="search_staff">Search Staff</string>
    <string name="add_friend">Add Friend</string>
    <string name="comment">Comment</string>
    <string name="your_comment_here">Your comment Here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="or_sign_in_with">Or Sign in with...</string>
</resources>
