<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/profile_header"
    android:layout_marginBottom="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:id="@+id/profile_icon"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_person_outline_black_24dp"
            android:layout_marginTop="@dimen/start_end_margin" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/name"
            android:layout_marginTop="@dimen/start_end_margin"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/favorite_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_food"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/vertical_space_content_areas"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/favorite_drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_drink"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/favorite_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_restaurant"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="16sp"/>


            <TextView
                android:id="@+id/friends"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textColor="@color/primary"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_friend"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/vertical_space_content_areas"/>

        </LinearLayout>

</android.support.v7.widget.CardView>