<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="200dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:layout_height="200dp"
        android:id="@+id/profile_icon"
        android:src="@mipmap/profile_pic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/start_end_margin" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintRight_toRightOf="@+id/profile_icon"
        app:layout_constraintLeft_toLeftOf="@+id/profile_icon"
        app:layout_constraintBottom_toBottomOf="@+id/profile_icon"
        app:layout_constraintTop_toTopOf="@+id/profile_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        app:layout_constraintTop_toBottomOf="@+id/profile_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView" />
    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/name"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_food"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/textView2" />
    <EditText
        android:id="@+id/favorite_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/favorite_food"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_gravity="center"
        android:textAlignment="center" />
    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_restaurant"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        app:layout_constraintTop_toBottomOf="@+id/favorite_drink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <EditText
        android:id="@+id/favorite_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/favorite_restaurant"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        app:layout_constraintTop_toBottomOf="@+id/textview3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_drink"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        app:layout_constraintTop_toBottomOf="@+id/favorite_food"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView3" />
    <EditText
        android:id="@+id/favorite_drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/favorite_drink"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>